--- a/client/src/components/home/Home.scss
+++ b/client/src/components/home/Home.scss
@@ -2,3 +2,25 @@
 body {
   background-color: var(--main-back-color);
 }
+
+.home {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  .main {
+    text-align: center;
+    padding: 1rem;
+  }
+
+  .tutorials {
+    padding: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+    // background-color: var(--main-back-color);
+    background-color: teal;
+    justify-content: space-evenly;
+    // align-self: auto;
+    flex: 1 0 21%;
+  }
+}
