--- a/client/src/components/home/Tutorial.scss
+++ b/client/src/components/home/Tutorial.scss
@@ -1,5 +1,5 @@
-img {
-  width: 400px;
-  height: 266px;
-  margin: 1rem 2rem 1rem 2rem;
+@import "../../style/mixins.scss";
+
+.tutorial {
+  @include tutorials();
 }
