--- a/client/src/components/home/Home.scss
+++ b/client/src/components/home/Home.scss
@@ -9,6 +9,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  // padding: 0 5% 0 5%;
 
   .main {
     text-align: center;
@@ -20,5 +21,17 @@ body {
   }
   .myTutorials {
     @include tutsort();
+  }
+
+  button.edit {
+    @include editDelBtn($margin: 1.5rem, $color: var(--edit-button));
+  }
+  button.delete {
+    @include editDelBtn($margin: 0.5rem, $color: var(--delete-button));
+  }
+
+  button.add {
+    transform: translateX(50vw) translateX(-55%);
+    @include addBtn($margin: 0, $color: var(--add-button));
   }
 }
