--- a/client/src/style/mixins.scss
+++ b/client/src/style/mixins.scss
@@ -2,17 +2,35 @@
   img {
     width: 400px;
     height: 266px;
-    margin: 1rem 2rem 1rem 2rem;
+    margin: 1rem 1rem 1rem 1rem;
     object-fit: cover;
   }
   text-align: center;
+  margin: 1rem 1rem 1rem 1rem;
 }
 
 @mixin tutsort {
   padding: 2rem;
   display: flex;
   flex-wrap: wrap;
-  background-color: teal;
   justify-content: space-evenly;
   flex: 1 0 21%;
+}
+
+@mixin editDelBtn($margin, $color) {
+  transform: translateY(-6rem);
+  float: left;
+  margin-left: $margin;
+  background-color: $color;
+  border: none;
+  border-radius: 5px;
+  padding: 0.2rem 0.5rem;
+}
+
+@mixin addBtn($margin, $color) {
+  width: fit-content;
+  background-color: $color;
+  border: none;
+  border-radius: 5px;
+  padding: 0.4rem 0.8rem;
 }
