--- a/client/src/style/variables.scss
+++ b/client/src/style/variables.scss
@@ -1,10 +1,15 @@
 :root {
   --main-back-color: #c4eaf5;
+  --tut-back-color: #c2ced1;
   --h1color: #26292c;
-  --h23color: #4f555a;
-  --pcolor: #676f75;
+  --h23color: #26292c;
+  --pcolor: #26292c;
   --navcolor: #37a2c0;
   --footer: #91acb3;
+  --add-button: #2ddd85;
+  --edit-button: #2ddd85;
+  --delete-button: #e93636;
+  --shadow-tut: #3d3d3d;
 }
 
 h1 {
