colors and all..

--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -2,6 +2,12 @@
 @import "./mixins.scss";
 @import "./forms.scss";
 
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap");
+
+body {
+  font-family: -apple-system, Montserrat;
+}
+
 // reset
 * {
   margin: 0;
