--- a/client/src/style/variables.scss
+++ b/client/src/style/variables.scss
@@ -1,15 +1,16 @@
 :root {
   --main-back-color: #c4eaf5;
   --tut-back-color: #c2ced1;
-  --h1color: #26292c;
-  --h23color: #26292c;
-  --pcolor: #26292c;
-  --navcolor: #37a2c0;
-  --footer: #91acb3;
-  --add-button: #2ddd85;
-  --edit-button: #2ddd85;
-  --delete-button: #e93636;
-  --shadow-tut: #3d3d3d;
+  --h1color: #494d50;
+  --h23color: #494d50;
+  --pcolor: #494d50;
+  --navcolor: #60c5e1;
+  --footer: #60c5e1;
+  --add-button: #00c853;
+  --edit-button: #00c853;
+  --delete-button: #f44336;
+  --shadow-tut: #afd2db;
+  --shadow-tut-dark: #9bb9c2;
 }
 
 h1 {
