--- a/client/src/style/variables.scss
+++ b/client/src/style/variables.scss
@@ -6,7 +6,7 @@
   --pcolor: #494d50;
   --navcolor: #60c5e1;
   --footer: #60c5e1;
-  --add-button: #00c853;
+  --add-button: #c4eaf5;
   --edit-button: #00c853;
   --delete-button: #f44336;
   --shadow-tut: #afd2db;
