--- a/client/src/components/misc/Footer.scss
+++ b/client/src/components/misc/Footer.scss
@@ -1,5 +1,5 @@
 .footer {
   background-color: var(--footer);
   text-align: center;
-  padding-top: 0.8rem;
+  padding: 0.3rem 0rem 0.3rem 0rem;
 }
