--- a/client/src/style/variables.scss
+++ b/client/src/style/variables.scss
@@ -1,5 +1,6 @@
 :root {
   --main-back-color: #c4eaf5;
+  --hover-nav-text-color: #c4eaf5;
   --tut-back-color: #c2ced1;
   --h1color: #494d50;
   --h23color: #494d50;
