--- a/client/src/components/home/Home.scss
+++ b/client/src/components/home/Home.scss
@@ -14,6 +14,19 @@ body {
   .main {
     text-align: center;
     padding: 1rem;
+
+    button{
+      background-color: #60c5e1;
+      border: none;
+      border-radius: 5px;
+      padding: 0.1rem 0.2rem 0.1rem 0.2rem;
+
+      &:hover{
+      font-weight: bold;
+      padding: 0.1rem 0.18rem 0.1rem 0.18rem;
+      color: #3a3d40; 
+      }
+    }
   }
 
   .tutorials {
