--- a/client/src/style/mixins.scss
+++ b/client/src/style/mixins.scss
@@ -45,3 +45,12 @@
   // box-shadow: 1px 1px 10px 5px var(--shadow-tut); // hover
   // box-shadow: 1px 1px 3px 5px var(--shadow-tut-dark); // clicked
 }
+@mixin menu-btns( $color) {
+  background-color: $color;
+  border: none;
+  border-radius: 5px;
+  padding: 0.2rem 0rem 0.2rem 0rem;
+
+}
+
+
