--- a/client/src/style/mixins.scss
+++ b/client/src/style/mixins.scss
@@ -45,12 +45,47 @@
   // box-shadow: 1px 1px 10px 5px var(--shadow-tut); // hover
   // box-shadow: 1px 1px 3px 5px var(--shadow-tut-dark); // clicked
 }
-@mixin menu-btns( $color) {
+@mixin menu-btns($color) {
   background-color: $color;
   border: none;
   border-radius: 5px;
   padding: 0.2rem 0rem 0.2rem 0rem;
-
 }
 
-
+@mixin form() {
+  width: 20rem;
+  display: flex;
+  flex-direction: column;
+  align-self: end;
+  margin: 1rem;
+  input {
+    background-color: var(--form-input-color);
+    margin: 0.2rem 0rem 1.5rem 0rem;
+    padding: 0.2rem 0rem 0.2rem 0rem;
+    border-radius: 5px;
+    border: none;
+  }
+  button {
+    background-color: var(--form-button-color);
+    margin-bottom: 0.9rem;
+    margin-top: 0.9rem;
+    padding: 0.2rem 0rem 0.2rem 0rem;
+    border-radius: 5px;
+    border: none;
+  }
+  p {
+    text-align: center;
+  }
+  p:not(:last-child) {
+    margin-bottom: 0.5rem;
+  }
+  a {
+    background-color: var(--navcolor);
+    border: none;
+    border-radius: 5px;
+    padding: 0.2rem 0.3rem 0.2rem 0.3rem;
+    &:hover {
+      font-weight: bold;
+    }
+  }
+}
