--- a/client/src/style/variables.scss
+++ b/client/src/style/variables.scss
@@ -1,6 +1,9 @@
 :root {
   --main-back-color: #c4eaf5;
   --hover-nav-text-color: #c4eaf5;
+  --form-back-color: #bce0eb;
+  --form-input-color: #daf1f7;
+  --form-button-color: #00897b;
   --tut-back-color: #c2ced1;
   --h1color: #494d50;
   --h23color: #494d50;
