--- a/client/src/style/variables.scss
+++ b/client/src/style/variables.scss
@@ -3,16 +3,17 @@
   --hover-nav-text-color: #c4eaf5;
   --form-back-color: #bce0eb;
   --form-input-color: #daf1f7;
-  --form-button-color: #00897b;
+  --form-button-color: #4caf50;
   --tut-back-color: #c2ced1;
   --h1color: #494d50;
   --h23color: #494d50;
   --pcolor: #494d50;
   --navcolor: #60c5e1;
   --footer: #60c5e1;
-  --add-button: #c4eaf5;
-  --edit-button: #00c853;
-  --delete-button: #f44336;
+  --add-button: #ccf4ff;
+  --edit-button: #4caf50;
+  --red-btn: #f44336;
+  --tut-frame: #ccf4ff;
   --shadow-tut: #afd2db;
   --shadow-tut-dark: #9bb9c2;
 }
