--- a/client/src/style/variables.scss
+++ b/client/src/style/variables.scss
@@ -12,6 +12,7 @@
   --footer: #60c5e1;
   --add-button: #ccf4ff;
   --edit-button: #4caf50;
+  --submit-button: #92d594;
   --red-btn: #f44336;
   --tut-frame: #ccf4ff;
   --shadow-tut: #afd2db;
