--- a/client/src/style/variables.scss
+++ b/client/src/style/variables.scss
@@ -11,9 +11,9 @@
   --navcolor: #60c5e1;
   --footer: #60c5e1;
   --add-button: #ccf4ff;
-  --edit-button: #4caf50;
   --submit-button: #92d594;
-  --red-btn: #f44336;
+  --edit-button: #92d594;
+  --delete-btn: #ef5350;
   --tut-frame: #ccf4ff;
   --shadow-tut: #afd2db;
   --shadow-tut-dark: #9bb9c2;
