--- a/client/src/components/home/Home.scss
+++ b/client/src/components/home/Home.scss
@@ -40,7 +40,7 @@ body {
     @include editDelBtn($margin: 1.5rem, $color: var(--edit-button));
   }
   button.delete {
-    @include editDelBtn($margin: 0.5rem, $color: var(--red-btn));
+    @include editDelBtn($margin: 0.5rem, $color: var(--delete-btn));
   }
 
   button.add {
