Box shadows on hover/active, and remove default active button outline

--- a/client/src/components/home/DefaultTutorials.scss
+++ b/client/src/components/home/DefaultTutorials.scss
@@ -2,4 +2,12 @@
 
 .defaultTutorial {
   @include tutorials();
+  box-shadow: var(--shadow-normal); // normal
+}
+
+.defaultTutorial:hover {
+  box-shadow: var(--shadow-hover);
+}
+.defaultTutorial:active {
+  box-shadow: var(--shadow-active);
 }
