--- a/client/src/style/mixins.scss
+++ b/client/src/style/mixins.scss
@@ -10,10 +10,6 @@
   background-color: var(--tut-frame);
   //
   border-radius: 5px;
-  // box-shadow: none|h-offset v-offset blur spread color |inset|initial|inherit;
-  box-shadow: 1px 1px 10px 1px var(--shadow-tut); // normal
-  // box-shadow: 1px 1px 10px 5px var(--shadow-tut); // hover
-  // box-shadow: 1px 1px 3px 5px var(--shadow-tut-dark); // clicked
 }
 
 @mixin tutsort {
@@ -42,7 +38,7 @@
   font-size: 1.1rem;
   border-radius: 5px;
   padding: 0.4rem 0.8rem;
-  box-shadow: 1px 1px 10px 1px var(--shadow-tut); // normal
+  // box-shadow: 1px 1px 10px 1px var(--shadow-tut); // normal
   // box-shadow: 1px 1px 10px 5px var(--shadow-tut); // hover
   // box-shadow: 1px 1px 3px 5px var(--shadow-tut-dark); // clicked
 }
