--- a/client/src/style/variables.scss
+++ b/client/src/style/variables.scss
@@ -3,6 +3,7 @@
   --hover-nav-text-color: #c4eaf5;
   --form-back-color: #bce0eb;
   --form-input-color: #daf1f7;
+  --form-outline-color: #60c5e1;
   --form-button-color: #4caf50;
   --tut-back-color: #c2ced1;
   --h1color: #494d50;
