--- a/client/src/style/mixins.scss
+++ b/client/src/style/mixins.scss
@@ -82,6 +82,11 @@
         border-radius: 5px;
         border: none;
       }
+      textarea:focus,
+      input:focus {
+        outline-color: var(--form-outline-color);
+      }
+
       button {
         background-color: var(--submit-button);
         margin-bottom: 0.9rem;
