hover active hover acrive...

--- a/client/src/components/home/Home.scss
+++ b/client/src/components/home/Home.scss
@@ -62,6 +62,7 @@ body {
     box-shadow: var(--shadow-normal);
     &:hover {
       box-shadow: var(--shadow-hover);
+      font-weight: 500;
     }
     &:active {
       box-shadow: var(--shadow-active);
