Cleanup some padding mess, and install react-icons to prepare for the popup modals..

--- a/client/src/components/home/Home.scss
+++ b/client/src/components/home/Home.scss
@@ -13,7 +13,7 @@ body {
 
   .main {
     text-align: center;
-    padding: 1rem;
+    padding: 0.5rem 1rem 0rem 1rem;
 
     button {
       background-color: #60c5e1;
