--- a/client/src/style/mixins.scss
+++ b/client/src/style/mixins.scss
@@ -61,6 +61,7 @@
     justify-content: center;
     align-items: center;
     background-color: var(--form-back-color);
+    border-radius: 5px;
 
     h2 {
       display: flex;
@@ -74,7 +75,7 @@
       display: flex;
       flex-direction: column;
       align-self: end;
-      margin: 1rem;
+      margin: 2rem;
       input {
         background-color: var(--form-input-color);
         margin: 0.2rem 0rem 1.5rem 0rem;
