Popups for the other forms too

--- a/client/src/components/misc/ErrorMessage.scss
+++ b/client/src/components/misc/ErrorMessage.scss
@@ -1,7 +1,8 @@
 section {
   .title {
+    text-align: center;
     color: var(--red-btn);
-    margin: 2rem 0rem 0rem 2.1rem;
+    margin: 2rem 0rem 0rem 0rem;
   }
   .clear-btn {
     margin-left: 0.5rem;
