--- a/client/src/components/home/ModalReg.scss
+++ b/client/src/components/home/ModalReg.scss
@@ -1,7 +1,6 @@
-.home {
+div {
   justify-content: flex-start;
-
-  .modal-container {
+  .logreg {
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -23,15 +22,21 @@
     //****************************************
     width: 100%;
     height: 100%;
-    .modal-position {
+    .modal-position-reg {
       align-content: center;
-      padding-top: 11vh;
-      .the-modal-form {
+      padding-bottom: 30vh;
+      .content {
         box-shadow: 1px 1px 10px 5px var(--shadow-tut);
         border-radius: 5px;
-        .title {
+        div h2 {
           justify-content: center;
+        }
+        form {
+          margin-top: 1rem;
+        }
+        .title {
           color: var(--delete-btn);
+          margin-top: 1rem;
         }
       }
     }
