--- a/client/src/components/home/DefaultTutorials.scss
+++ b/client/src/components/home/DefaultTutorials.scss
@@ -3,6 +3,7 @@
 .defaultTutorial {
   @include tutorials();
   box-shadow: var(--shadow-normal); // normal
+  color: var(--pcolor);
   p {
     padding-bottom: 1.6rem;
   }
