--- a/client/src/components/home/Tutorial.scss
+++ b/client/src/components/home/Tutorial.scss
@@ -3,6 +3,7 @@
 .mytutorial {
   @include tutorials();
   box-shadow: var(--shadow-normal); // normal
+  color: var(--pcolor);
 }
 
 .mytutorial:hover {
