Hover effect on default tutorials too

--- a/client/src/components/home/DefaultTutorials.scss
+++ b/client/src/components/home/DefaultTutorials.scss
@@ -15,3 +15,13 @@
 .defaultTutorial:active {
   box-shadow: var(--shadow-active);
 }
+
+.defaultTutorial {
+  img {
+    transition: transform 0.2s ease;
+    &:hover {
+      filter: brightness(105%);
+      transform: scale(1.01);
+    }
+  }
+}
