Show all tutorials for everyone, but dont show the edit/delete buttons if you (logged-in user) didnt create the tutorial card, and remove the default dummy tutorial cards..

--- a/client/src/components/home/Tutorial.scss
+++ b/client/src/components/home/Tutorial.scss
@@ -15,6 +15,10 @@
   box-shadow: var(--shadow-active);
 }
 
+.p-padding-for-visitors {
+  padding-bottom: 1.585rem;
+}
+
 .img-link {
   img {
     transition: transform 0.2s ease;
