--- a/client/src/components/home/ModalReg.scss
+++ b/client/src/components/home/ModalReg.scss
@@ -33,10 +33,16 @@ div {
         }
         form {
           margin-top: 1rem;
+          a:hover {
+            background-color: var(--edit-button);
+          }
         }
         .title {
           color: var(--delete-btn);
           margin-top: 1rem;
+          .clear-btn:hover {
+            background-color: var(--edit-button);
+          }
         }
       }
     }
