--- a/client/src/style/variables.scss
+++ b/client/src/style/variables.scss
@@ -13,7 +13,8 @@
   --footer: #60c5e1;
   --add-button: #92d594;
   // --add-button: #d9f7ff;
-  --submit-button: #92d594;
+  --submit-button: #60c5e1;
+  // --submit-button: #92d594;
   --edit-button: #92d594;
   --delete-btn: #ef5350;
   --tut-frame: #d9f7ff;
