--- a/client/src/style/variables.scss
+++ b/client/src/style/variables.scss
@@ -9,6 +9,7 @@
   --h1color: #494d50;
   --h23color: #494d50;
   --pcolor: #494d50;
+  --text-color-hover: #3a3d40;
   --navcolor: #60c5e1;
   --footer: #60c5e1;
   --add-button: #92d594;
@@ -22,6 +23,7 @@
   --shadow-tut-dark: #9accdb;
   --back-blur-light: rgba(188, 224, 235, 0.438);
   --back-blur-dark: rgba(151, 190, 202, 0.678);
+  --nav-logo-hight: 2.8359375rem;
 
   //
   // box-shadow: none|h-offset v-offset blur spread color |inset|initial|inherit;
