--- a/client/src/components/home/Home.scss
+++ b/client/src/components/home/Home.scss
@@ -9,23 +9,47 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  // padding: 0 5% 0 5%;
+  padding-right: 0.5;
 
   .main {
     text-align: center;
-    padding: 0.5rem 1rem 0rem 1rem;
+    // padding-right: 0.5;
+
+    .hero-section {
+      height: calc(56vh - var(--nav-logo-hight));
+      // background-image: url("../../img/hero-img.png");
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+
+      .hero {
+        // padding-top: 3vh;
+
+        .main-title {
+          font-size: 1.5rem;
+        }
+        .intro-section {
+          padding-top: 2rem;
+          color: var(--h1color);
+          // font-size: 1.2rem;
+          height: 20vh;
+        }
+      }
+    }
 
     button {
       background-color: var(--navcolor);
       border: none;
       border-radius: 5px;
       padding: 0.1rem 0.2rem 0.1rem 0.2rem;
+      color: var(--h1color);
 
       &:hover {
         font-weight: bold;
         padding: 0.1rem 0.18rem 0.1rem 0.18rem;
         background-color: var(--edit-button);
-        color: #3a3d40;
+        color: var(--text-color-hover);
       }
     }
   }
