less saturation on background

--- a/client/src/style/variables.scss
+++ b/client/src/style/variables.scss
@@ -1,7 +1,7 @@
 :root {
-  --main-back-color: #c4eaf5;
+  --main-back-color: #e1f0f5;
   --hover-nav-text-color: #c4eaf5;
-  --form-back-color: #bce0eb;
+  --form-back-color: #bfd9e0;
   --form-input-color: #daf1f7;
   --form-outline-color: #60c5e1;
   --form-button-color: #4caf50;
@@ -18,9 +18,9 @@
   // --submit-button: #92d594;
   --edit-button: #92d594;
   --delete-btn: #ef5350;
-  --tut-frame: #d9f7ff;
-  --shadow-tut: #afd2db;
-  --shadow-tut-dark: #9accdb;
+  --tut-frame: #ffffff;
+  --shadow-tut: #c5d7db;
+  --shadow-tut-dark: #bcccd1;
   --back-blur-light: rgba(188, 224, 235, 0.438);
   --back-blur-dark: rgba(151, 190, 202, 0.678);
   --nav-logo-hight: 2.8359375rem;
