--- a/client/src/components/home/Home.scss
+++ b/client/src/components/home/Home.scss
@@ -40,15 +40,21 @@ body {
 
           .main-title {
             font-size: 2.1rem;
+            text-shadow: 0px 1px 2px #bfd9e0;
           }
           .intro-section {
             padding-top: 1.9rem;
             h2 {
               font-size: 2.1rem;
               color: var(--navcolor);
+              text-shadow: 0px 1px 1px #5d6266;
             }
             .button-arrow {
               margin-top: 2rem;
+              cursor: pointer;
+              &:hover {
+                filter: brightness(110%) saturate(90%) hue-rotate(-50deg);
+              }
             }
           }
         }
