--- a/client/src/components/misc/Footer.scss
+++ b/client/src/components/misc/Footer.scss
@@ -1,6 +1,9 @@
 .footer {
   background-color: var(--footer);
+  color: var(--pcolor);
+  font-size: 1.1rem;
   text-align: center;
   padding: 0.3rem 0rem 0.3rem 0rem;
   font-weight: bold;
+  padding: 1rem 0 1rem 0;
 }
