--- a/client/src/components/home/Home.scss
+++ b/client/src/components/home/Home.scss
@@ -53,7 +53,7 @@ body {
               margin-top: 2rem;
               cursor: pointer;
               &:hover {
-                filter: brightness(110%) saturate(90%) hue-rotate(-30deg);
+                filter: brightness(90%) saturate(120%);
               }
             }
           }
