--- a/client/src/components/home/Home.scss
+++ b/client/src/components/home/Home.scss
@@ -33,6 +33,9 @@ body {
           height: 22rem;
           padding: 0rem 1rem 0rem 1rem;
           margin: 0 2rem 0 2rem;
+          @media only screen and (max-width: 600px) {
+            margin: 0;
+          }
           display: flex;
           flex-direction: column;
           justify-content: center;
@@ -41,6 +44,15 @@ body {
           .main-title {
             font-size: 2.1rem;
             text-shadow: 0px 1px 2px #bfd9e0;
+            @media screen and (max-width: 1200px) {
+              font-size: 1.7rem;
+            }
+            @media screen and (max-width: 768px) {
+              // font-size: 1.1rem;
+            }
+            @media screen and (max-width: 600px) {
+              font-size: 1.2rem;
+            }
           }
           .intro-section {
             padding-top: 1.9rem;
@@ -48,6 +60,12 @@ body {
               font-size: 2.1rem;
               color: var(--navcolor);
               text-shadow: 0px 1px 1px #5d6266;
+              @media screen and (max-width: 1200px) {
+                font-size: 1.7rem;
+              }
+              @media screen and (max-width: 600px) {
+                font-size: 1.2rem;
+              }
             }
             .button-arrow {
               margin-top: 2rem;
@@ -61,6 +79,9 @@ body {
         .learn {
           height: 20rem;
           margin: 0 2rem 3rem 1rem;
+          @media screen and (max-width: 1200px) {
+            display: none;
+          }
         }
       }
     }
@@ -120,3 +141,15 @@ body {
     }
   }
 }
+
+// @media screen and (max-width: 1200px) {
+//   body {
+//     background-color: rgb(201, 166, 154);
+//   }
+// }
+
+// @media only screen and (max-width: 600px) {
+//   body {
+//     background-color: rgb(132, 161, 132);
+//   }
+// }
