--- a/client/src/components/home/Modal.scss
+++ b/client/src/components/home/Modal.scss
@@ -2,10 +2,11 @@
   justify-content: flex-start;
 
   .modal-container {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    position: absolute;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
     z-index: 10000;
 
     //****************************************
