--- a/client/src/components/home/ScrollToTop.scss
+++ b/client/src/components/home/ScrollToTop.scss
@@ -1,12 +1,20 @@
 .scroll-to-top {
   position: fixed;
-  bottom: 0rem;
+  bottom: 0.5rem;
   right: 0.5rem;
   animation: fadeIn 700ms ease-in-out 1s both;
   cursor: pointer;
 
   &:hover {
     filter: brightness(80%) saturate(110%);
+  }
+  @media only screen and (max-width: 600px) {
+    bottom: 0.8rem;
+    right: 1.1rem;
+    img {
+      height: 45px;
+      width: 45px;
+    }
   }
 }
 
